Changes background image

--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
+                <li><a href="https://github.com/JNagarkar"><i class="fa fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/jaynagarkar"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.facebook.com/jaydatta.nagarkar"><i class="fa fa-facebook"></i></a></li>
+               <li><a href="https://www.facebook.com/jaydatta.nagarkar"><i class="fa fa-quora"></i></a></li>
                <li><a href="https://twitter.com/JayNagarkar1"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="https://www.linkedin.com/in/jaynagarkar"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.instagram.com/jaynagarkar/"><i class="fa fa-instagram"></i></a></li>
                <li><a href="jay.nagarkar"><i class="fa fa-skype"></i></a></li>
             </ul>
@@ -563,22 +565,6 @@
 	      </div><!-- modal-04 End -->
 
 
-         <div id="modal-08" class="popup-modal mfp-hide">
-
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-retrocam.jpg" alt="" />
-
-		      <div class="description-box">
-			      <h4>Retrocam</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Webdesign, Photography</span>
-		      </div>
-
-            <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-		         <a class="popup-modal-dismiss">Close</a>
-            </div>
-
-	      </div><!-- modal-01 End -->
 
 
       </div> <!-- row End -->
@@ -601,11 +587,14 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                  <li><a href="https://github.com/JNagarkar"><i class="fa fa-github"></i></a></li>
+                  <li><a href="https://www.linkedin.com/in/jaynagarkar"><i class="fa fa-linkedin"></i></a></li>
+                 <li><a href="https://www.facebook.com/jaydatta.nagarkar"><i class="fa fa-facebook"></i></a></li>
+                 <li><a href="https://www.facebook.com/jaydatta.nagarkar"><i class="fa fa-quora"></i></a></li>
+                 <li><a href="https://twitter.com/JayNagarkar1"><i class="fa fa-twitter"></i></a></li>
+                 <li><a href="https://www.instagram.com/jaynagarkar/"><i class="fa fa-instagram"></i></a></li>
+                 <li><a href="jay.nagarkar"><i class="fa fa-skype"></i></a></li>
+
             </ul>
 
             <ul class="copyright">
