--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
       </nav> <!-- end #nav-wrap -->
 
       <div class="row banner">
+
          <div class="banner-text">
             <h1 class="responsive-headline">It's Jaydatta Nagarkar.</h1>
-            <h3> <span>"Life begins at the end of your Comfort Zone"</span>. I am a Software Developer / Engineer and <span>CS Grad student at ASU</span> .
-             I build and break stuff. <a class="smoothscroll" href="#about">Start scrolling</a>
+            <h3> <p><p><span>"Life begins at the end of your Comfort Zone"</span><p>  . <span>I am a Software Developer / Engineer and <span>CS Grad student at ASU</span> .
+             I build and break stuff.</span> <a class="smoothscroll" href="#about">Start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
@@ -69,6 +70,8 @@
                <li><a href="jay.nagarkar"><i class="fa fa-skype"></i></a></li>
             </ul>
          </div>
+
+
       </div>
 
       <p class="scrolldown">
@@ -121,7 +124,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="https://drive.google.com/file/d/0B8s-mNAyjAv_Sm1hNjBsMThfNDg/view?usp=sharing" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="https://drive.google.com/file/d/0B8s-mNAyjAv_Sm1hNjBsMThfNDg/view?usp=sharing" class="button"><i class="fa fa-download"></i>Resume</a>
                   </p>
                </div>
 
