--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 
          <div class="banner-text">
             <h1 class="responsive-headline">It's Jaydatta Nagarkar.</h1>
-            <h3> <p><p><span>"Life begins at the end of your Comfort Zone"</span><p>  . <span>I am a Software Developer / Engineer and <span>CS Grad student at ASU</span> .
+            <h3> <span>"Life begins at the end of your Comfort Zone"</span>  . <span>I am a Software Developer / Engineer and <span>CS Grad student at ASU</span> .
              I build and break stuff.</span> <a class="smoothscroll" href="#about">Start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
-            <ul class="social">
+            <p><p><ul class="social">
                 <li><a href="https://github.com/JNagarkar"><i class="fa fa-github"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/jaynagarkar"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://www.facebook.com/jaydatta.nagarkar"><i class="fa fa-facebook"></i></a></li>
