--- a/index.html
+++ b/index.html
@@ -99,11 +99,14 @@
 
             <p>
               <ul>
-              <li>CS Graduate Student at <span>Arizona State University</span> open for new opportunities starting May 2017. </li>
-              <li>Interested in distributed & parallel databases, data mining, data visualization, statistical learning and web development ofcourse!.</li>
 
-              <li>Self-motivated and accomplished team player with strong understanding of Computer Science fundamentals.</li>
-              <li>Core competencies -> Java, Apache Spark, Hadoop, Python and experience with big-data & distributed technologies and Web development.</li>
+              <li>Hello there, Thanks that you found my profile worth pondering! I am sure you would love to know more about me! </li>
+              <li>Am I geekish??? Well, Yes, if you define a person sitting for 12+ hours a day in front of a Laptop. </li>
+              <li>I honestly feel that there is so much to learn and the time is so short!</li>
+              <li> I am  facsinated by the magical wand of distributed Systems and the charms Data Science can spell! </li>
+
+              <li>I am a self-motivated and accomplished team player with strong understanding of Computer Science fundamentals.</li>
+              <li>My Core competencies -> Java, Apache Spark, Hadoop, Python and experience with big-data & distributed technologies and Web development.</li>
             </ul>
             </p>
 
@@ -158,7 +161,7 @@
 
                <div class="twelve columns">
 
-                  <h3>University of Life</h3>
+                  <h3>Arizona State University</h3>
                   <p class="info">Master of Computer Science <span>&bull;</span> <em class="date">August 2015 - Current</em></p>
 
                   <p>
@@ -249,8 +252,17 @@
                   <p class="info">Software Engineering Intern <span>&bull;</span> <em class="date">Summer 2016</em></p>
 
                   <p>
-                    Worked on interesting Data Engineering stuff.
-                    <span>Spark</span> <span> Hadoop </span> <span> Big data </span>
+<ul style="list-style-type:disc">
+                    <li>Worked as an part of the Merchant monitoring team. </li>
+                      <li>Developed a "volume drop model" that senses a decline in volume of transactions and a restoration to expected transaction volume for a merchant. Remotely collaborated with backend team for the same.</li>
+                      <li>Extended the existing system which is currently used for detecting other type of anomalies like succes-rate-drop ,flatlines et al.</li>
+<li>Technologies used : Java, Storm, zookeeper, kafka, Esper CEP.</li>
+<li>Tool to create golden dataset</li>
+<li>Created a tool that in a distributed way extracts and aggregates alerts as by merchant name, transaction type and detection type. Extracts data from data pool of 750 million records and iterated this process over hundreds of alerts.</li>
+
+<li>Golden datasets are used for training machine learning models and validation/ fine-tuning for heuristic models.</li>
+Technologies: Java, Spark-core , HDFS.
+</ul>
                   </p>
 
                </div>
@@ -295,14 +307,15 @@
 
                   <h3>Cybage Software's Inc</h3>
                   <p class="info">Software Engineering <span>&bull;</span> <em class="date">June 2014 - June 2015</em></p>
-
-                  <p>
-                    Start of Professional Career!
-                    Worked as part of CMS domain, Trained in LAMP Stack and CMS.
+                  Start of Professional Career!
+<ul style="list-style-type:disc">
+<li> Underwent Training in LAMP stack & Jquery , HTML and CSS .</li>
+<li> Developed Sports Portal which keeps track of on-going sports event, saves Player Profile, Match Statistics. Technologies used: PHP, Mysql. <li>
+<li> Facilitated users to register for future events & authenticated users by single sign on from employer’s mail domain.</li>
+<li> Collaborated on migration of questionmark.com from Sharepoint to Drupal.</li>
+</ul>
                   </p>
-
                </div>
-
             </div> <!-- item end -->
 
 <!--            <div class="row item">
@@ -343,18 +356,20 @@
                   <h3>Agreeya Mobility Pvt Ltd</h3>
                   <p class="info">Project Trainee (Industry-sponsored Capstone Project)<span>&bull;</span> <em class="date">April 2014 - May-2015</em></p>
 
-                  <p>
-                    Worked on building a web-portal to assist Lawyer's and Clients.
-                  </p>
-
+<ul style="list-style-type:disc">
+<li>Conceptualized and built a web-service which enables document generation from user-response with dynamic questionnaire based on previous responses. </li>
+<li>Wrote a parser which outputs a JSON by accepts user input specifying UI elements and their properties. </li>
+<li>Wrote Backend services for accepting this JSON as post request and accordingly modifying JS elements to display different form structure for each of the 1000 forms. </li>
+<li>Provided form recommendation to user based on his previous selections, used k-means clustering for the same.</li>
+<li>Technologies used:
+                  <span>JBoss server, Hibernate, JAVA, JSP, Ext-js, Bootstrap, Itext library.</span></li>
                </div>
-
             </div> <!-- item end -->
 
 <!--            <div class="row item">
 
-               <div class="twelve columns">
 
+<div class="twelve columns">
                   <h3>Super Cool Studio</h3>
                   <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
 
