--- a/index.html
+++ b/index.html
@@ -166,7 +166,10 @@
                   <p class="info">Master of Computer Science <span>&bull;</span> <em class="date">August 2015 - Current</em></p>
 
                   <p>
-                    ASU has always been special for me !. My first ever international experience.
+                    Currently pursuing Masters in Computer Science at Arizona State University.
+                    I plan to specialize in Distributed data processing, Recommendation systems, data science and data engineering.
+                  
+
 
                   </p>
 
